# warp

./: .TODO  .gitignore  Cargo.toml  README.md  build-example.sh  build.sh  go.mod  go.sum  install-nvidia-utilities.sh  main.go
.docker/base/: Dockerfile  entrypoint.sh  ffmpeg.sh  run-bash.sh  supervisord.conf
.docker/x264-base/: Dockerfile  ffmpeg.sh  supervisord.conf
.github/: dependabot.yml  label-regex.yml  labeler.yml  release-drafter.yml
.github/workflows/: auto-labeler.yml  dockerhub.yml  draft.yml  ghcr-mini.yml  ghcr-nvenc.yml  ghcr.yml  go-tests.yml  publish-ghcr.yml  pull-request.yml  release-binary.yml  releases.yml  ui-pr.yaml
client/: .gitignore  package.json
client/src/: esbuild.js  index.html  index.tsx  player.css  player.ts
docker/base/: Dockerfile  entrypoint.sh
docker/brave/: Dockerfile  brave.sh
docker/nvidia/: 99-xbox-gamepad.rules  Dockerfile  entrypoint.sh  ffmpeg.sh  run-wine.sh
docker/server/: Dockerfile
examples/: README.md
examples/brave/: Dockerfile  brave.sh
examples/chrome-x264/: Dockerfile  openbox.xml  supervisord.conf
examples/firefox/: Dockerfile  firefox.sh
examples/h264-chrome/: Dockerfile  openbox.xml  policies.json  preferences.json
examples/h264-docker/: Dockerfile
internal/input/: config.go  device.go  events.go  gpad.go  gpad.go.txt  input.go  message.go  session.go  stream.go
media/: generate.sh
moq-quinn/: Cargo.toml
moq-transport/: Cargo.toml
moq-warp/: Cargo.toml
player/: .gitignore  esbuild.config.mjs  package.json  serve.go  tsconfig.json
server/: main.go
src/: main.rs
(+71 files in other folders)
